--- a/starter-code/UserInfoTabs/app/src/main/AndroidManifest.xml
+++ b/starter-code/UserInfoTabs/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AboutFragment"
+            android:label="@string/title_activity_about_fragment"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ContactFragment"
+            android:label="@string/title_activity_contact_fragment"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
